# timepix-sort

./: .gitignore  README.md  meson.build  pyproject.toml  setup.py
.github/: pyproject.toml
.github/workflows/: python-package.yml
c++/include/timepix_sort/: data_model.h  data_model_chunks.h  process.h  read.h
c++/include/timepix_sort/detail/: process_chunks.h
c++/src/: Makefile  main.cpp  process.cpp  read.cpp  read_raw.cpp
examples/: image_data.npy  plot_simple.py  use_ext.py
examples/comparison/: load_exported_data.py
src/: meson.build
src/c++/: chunks.cpp  events.cpp  io.cpp  lookup_table.h  lookup_table_detail.h  module.cpp  timepix_sort_py.h  volume.cpp
src/timepix_sort/: __init__.py  config.py  data_model.py  exceptions.py  meson.build  post_process.py  process.py  process_chunks.py  read.py  sort.py  utils.py
tests/: read_data.py  test_read_data.py  test_read_data_extension_directly.py
