# [build-system]
# requires = [
#     "setuptools",
#     "setuptools-scm",
#     "numpy",
#     "pybind11"
#     # "fsspec"
# ]
# build-backend = "setuptools.build_meta"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython']



[project]
name = "timepix_sort"
version = "0.1.0"
description = "Sort pixels events"
authors = [
    {name="Pierre Schnizer", email="pierre.schnizer@helmholtz-berlin.de"},
    {name="Florian Kronast", email="florian.kronast@helmholtz-berlin.de"},
]



# [project.url]
# homepage = "https://github.com/hz-b/timepix_sort"
